--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -60,7 +60,11 @@
                     </ul>
                     <div class="navbar-form navbar-left" role="search" ng-controller="searchResults as S">
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Search for products">
+                            <input type="text" class="form-control" id="search-box" placeholder="Search for products"
+                                   ng-model="searchModel" ng-model-options="{debounce: 750}" ng-change="S.quicksearch()">
+
+
+
                         </div>
                         <button type="submit" class="btn btn-default">Search</button>
                     </div>
@@ -264,7 +268,8 @@
                 var self = this;
                 self.searchProductsResults = [];
 
-                self.searchProductsByChain = function($chain){
+                self.quicksearch = function(){
+                    $chain = angular.element('#search-box').val();
                     if($chain.length <2){
                         return;
                     }
